<?xml version="1.0"?>
<package>
  <name>path_planning</name>
  <version>0.0.0</version>
  <description>This package contains an implementation of path planning within an OctoMap. It uses the OMPL Library to create safe obstacle-free and smooth trajectories that reach a specific goal.</description>

  <maintainer email="kosmastsk@gmail.com">Kosmas Tsiakas</maintainer>

  <license>GPLv3</license>

  <url type="issuetracker">https://github.com/kosmastsk/thesis/issues</url>

  <author email="">Ayush Gaud</author>
  <author email="kosmastsk@gmail.com">Kosmas Tsiakas</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>octomap_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
